# setmore-python-api

./: .gitignore  README.md  __init__.py  pyproject.toml  setmoreapi.py
appointments/: appointments.py
customers/: customers.py
services/: __init__.py  services.py
setmore/: __init__.py  setmoreapi.py
setmore_auth/: __init__.py  setmore_auth.py
staff/: staff.py
timeslots/: timeslots.py
