[project]
name = "setmore-python-api"
version = "1.0.11"
description = "Unofficial python module for the Setmore API"
license = {file = "LICENSE.txt"}
requires-python = ">=3.9"
readme = "README.md"
authors = [
	{name = "Peter Fulton", email = "jpfulton248@gmail.com"}
]

dependencies = [
	"requests>=2.3",
]

[project.urls]
"Homepage" = "https://github.com/jpfulton248/setmore-python-api"
"Bug Reports" = "https://github.com/jpfulton248/setmore-python-api/issues"